--- a/Views/SupplierManagementView.axaml
+++ b/Views/SupplierManagementView.axaml
@@ -122,6 +122,7 @@
                                 <DataGrid
                                     Height="650"
                                     Margin="0,20,0,0"
+                                    IsReadOnly="True"
                                     CanUserReorderColumns="False"
                                     CanUserSortColumns="False"
                                     GridLinesVisibility="All"
@@ -351,6 +352,7 @@
                                 </Grid>
                                 <DataGrid
                                     MaxHeight="650"
+                                    IsReadOnly="True"
                                     Margin="0,20,0,0"
                                     CanUserReorderColumns="False"
                                     CanUserSortColumns="False"
