refactor(components): add align-right on subtotal value in LogWalkInPurchaseView

--- a/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
+++ b/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
@@ -558,6 +558,7 @@
 															Classes="h5" />
 														<TextBlock
 															Text="{CompiledBinding PurchaseSummarySubtotal}"
+															TextAlignment="Right"
 															Classes="h5" />
 													</StackPanel>
 												</StackPanel>
