refactor(settings): change logic to check the recovery-path to start the scheduler instead of download-path

--- a/Components/SettingsDialog/SettingsDialogCard.axaml
+++ b/Components/SettingsDialog/SettingsDialogCard.axaml
@@ -197,7 +197,7 @@
                                                     FontWeight="SemiBold"
                                                     HorizontalAlignment="Left"/>
                                                 <TextBlock 
-                                                    Text="Recover your data from an existing backup. (JSON file)"
+                                                    Text="Recover your data from an existing backup. (BAK file)"
                                                     Width="500"
                                                     Classes="Caption Muted"
                                                     HorizontalAlignment="Left"/>
