--- a/Components/AddNewMember/AddNewMemberView.axaml
+++ b/Components/AddNewMember/AddNewMemberView.axaml
@@ -145,10 +145,12 @@
 										<StackPanel Grid.Row="0" Grid.Column="3" Margin="30,30,0,0">
 											<TextBlock Text="Gender" Classes="LabelField" />
 											<StackPanel Orientation="Vertical" Margin="10,8,0,0" Spacing="23">
-												<RadioButton Content="Male" GroupName="EmployeeGender" Classes="FormRadio"
-												             IsChecked="{CompiledBinding IsMale, Mode=TwoWay}" />
-												<RadioButton Content="Female" GroupName="EmployeeGender" Classes="FormRadio"
-												             IsChecked="{CompiledBinding IsFemale, Mode=TwoWay}" />
+												<CheckBox
+													Content="Male"
+													IsChecked="{CompiledBinding IsMale}"/>
+												<CheckBox
+													Content="Female"
+													IsChecked="{CompiledBinding IsFemale}"/>
 											</StackPanel>
 										</StackPanel>
 
@@ -767,16 +769,12 @@
 										<StackPanel Grid.Row="0" Grid.Column="3" Margin="0,30,0,0">
 											<TextBlock Text="Gender" Classes="LabelField" />
 											<StackPanel Orientation="Vertical" Margin="10,8,0,0" Spacing="23">
-												<RadioButton 
-													Content="Male" 
-													GroupName="EmployeeGender" 
-													Classes="FormRadio"
-													IsChecked="{CompiledBinding IsMale, Mode=TwoWay}" />
-												<RadioButton 
-													Content="Female" 
-													GroupName="EmployeeGender" 
-													Classes="FormRadio"
-													IsChecked="{CompiledBinding IsFemale, Mode=TwoWay}" />
+												<CheckBox
+													Content="Male"
+													IsChecked="{CompiledBinding IsMale}"/>
+												<CheckBox
+													Content="Female"
+													IsChecked="{CompiledBinding IsFemale}"/>
 											</StackPanel>
 										</StackPanel>
 
