--- a/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
+++ b/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
@@ -168,11 +168,13 @@
 										<!-- Gender Field -->
 										<StackPanel Grid.Row="1" Grid.Column="2" Margin="0,30">
 											<TextBlock Text="Gender" Classes="LabelField" />
-											<StackPanel Orientation="Vertical" Margin="10,8,0,0" Spacing="23">
-												<RadioButton Content="Male" GroupName="EmployeeGender" Classes="FormRadio"
-												             IsChecked="{CompiledBinding IsMale}" />
-												<RadioButton Content="Female" GroupName="EmployeeGender" Classes="FormRadio"
-												             IsChecked="{CompiledBinding IsFemale}" />
+											<StackPanel Orientation="Vertical" Margin="10,8,0,0" Spacing="15">
+												<CheckBox
+													Content="Male"
+													IsChecked="{CompiledBinding IsMale}"/>
+												<CheckBox
+													Content="Female"
+													IsChecked="{CompiledBinding IsFemale}"/>
 											</StackPanel>
 										</StackPanel>
 									</Grid>
@@ -755,11 +757,13 @@
 										<!-- Gender Field -->
 										<StackPanel Grid.Row="1" Grid.Column="2" Margin="0,30">
 											<TextBlock Text="Gender" Classes="LabelField" />
-											<StackPanel Orientation="Vertical" Margin="10,8,0,0" Spacing="23">
-												<RadioButton Content="Male" GroupName="EmployeeGender" Classes="FormRadio"
-												             IsChecked="{CompiledBinding IsMale}" />
-												<RadioButton Content="Female" GroupName="EmployeeGender" Classes="FormRadio"
-												             IsChecked="{CompiledBinding IsFemale}" />
+											<StackPanel Orientation="Vertical" Margin="10,8,0,0" Spacing="15">
+												<CheckBox
+													Content="Male"
+													IsChecked="{CompiledBinding IsMale}"/>
+												<CheckBox
+													Content="Female"
+													IsChecked="{CompiledBinding IsFemale}"/>
 											</StackPanel>
 										</StackPanel>
 									</Grid>
