fixed ActiveNow where it is now hourly checkin, and once checkout it will be deducted

--- a/Views/DashboardView.axaml
+++ b/Views/DashboardView.axaml
@@ -198,7 +198,7 @@
 												Title="Active Now"
 												CardBackground="{StaticResource OrangeGradient}"
 												Foreground="White"
-												Hint="{CompiledBinding ActiveNowGrowth, StringFormat='+{0}% since yesterday'}"
+												Hint="{CompiledBinding ActiveNowGrowthFormatted}"
 												Value="{CompiledBinding ActiveNow, StringFormat='+{0}'}">
 												<dashboard:OverviewCard.Icon>
 													<Svg
