refactor(components): lock session quantity to 1 in LogWalkInPurchaseView

--- a/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
+++ b/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
@@ -218,9 +218,10 @@
 												IsVisible="{CompiledBinding IsQuantityVisible, Mode=TwoWay}"
 												Value="{CompiledBinding SpecializedPackageQuantity, Mode=TwoWay}"
 												IsEnabled="{CompiledBinding IsQuantityEditable}"
+												IsReadOnly="True"
 												Width="130"
 												Minimum="1"
-												Maximum="100"
+												Maximum="1"
 												Margin="0,21"
 												shadui:ControlAssist.Label="Quantity"
 												FormatString="N0"
@@ -809,7 +810,8 @@
 												IsEnabled="{CompiledBinding IsQuantityEditable}"
 												Width="130"
 												Minimum="1"
-												Maximum="100"
+												Maximum="1"
+												IsReadOnly="True"
 												Margin="0,21"
 												shadui:ControlAssist.Label="Quantity"
 												FormatString="N0"
