refactor(components): when adding an employee, its status is auto-set to Active

--- a/Components/AddNewEmployeeDialog/AddNewEmployeeDialogCard.axaml
+++ b/Components/AddNewEmployeeDialog/AddNewEmployeeDialogCard.axaml
@@ -319,7 +319,7 @@
 							HorizontalAlignment="Left"
 							Width="160"
 							shadui:ControlAssist.Label="Status"
-							PlaceholderText="-"
+							IsEnabled="{CompiledBinding IsEmployeeStatusItemEnabled}"
 							ItemsSource="{CompiledBinding EmployeeStatusItems}"
 							SelectedItem="{CompiledBinding EmployeeStatus, Mode=TwoWay}">
 						</ComboBox>
